--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lanka Software Foundation</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <!-- Swiper CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/style.css">
   <style>
+    body {
+  background-color: #e9f6fc;
+}
+
     .grow-on-hover {
       transition: transform 0.15s ease;
     }
@@ -37,53 +43,180 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
-  <section class="py-5 text-center">
-    <div class="container animate__animated animate__fadeInDown">
-      <h1 class="display-5 fw-bold">Open Source for Public Good</h1>
-      <p class="lead">Empowering governments and communities through innovative open-source software.</p>
-      <a href="#get-involved" class="btn btn-primary btn-lg grow-on-hover">Get Involved</a>
-    </div>
-  </section>
+ <section class="hero-section py-5">
+  <div class="container">
+    <div class="row align-items-center">
+      
+      <!-- Left Image -->
+      <div class="col-md-6 text-center mb-4 mb-md-0">
+        <img src="pic1.png" alt="Empowering Sri Lanka" class="img-fluid rounded shadow">
+      </div>
 
-  <!-- About Section -->
-  <section id="about" class="py-5">
-    <div class="container animate__animated animate__fadeInLeft">
-      <h2>About LSF</h2>
-      <p>LSF has been developing large-scale open-source solutions for over 15 years to support digital transformation globally, focusing on public services like disaster management, elections, and education.</p>
-    </div>
-  </section>
+      <!-- Right Text -->
+      <div class="col-md-6 text-start">
+        <h6 class="text-primary fw-bold">Open Source for Public Good</h6>
+        <h1 class="display-5 fw-bold">Building Digital Public Infrastructure</h1>
+        <p class="lead mt-3">
+          Empowering governments and communities through innovative open-source software solutions,
+          fostering transparency, efficiency, and inclusive digital transformation globally.
+          We've been passionately developing large-scale open-source solutions for over 15 years,
+          collaborating with governments and communities to tackle pressing challenges from disaster
+          management and elections to education and environmental sustainability.
+        </p>
+        <div class="mt-4">
+          <a href="#our-projects" class="btn btn-primary btn-lg me-2">Our Projects</a>
+          <a href="#get-involved" class="btn btn-outline-primary btn-lg">Get Involved</a>
+        </div>
+      </div>
 
-  <!-- Projects Section -->
-  <section id="projects" class="py-5 bg-light">
-    <div class="container animate__animated animate__fadeInRight">
-      <h2>Our Projects</h2>
-      <p>We work on Digital Public Infrastructure, secure open-source email platforms, and advanced solutions for government digital services.</p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Fellows Section -->
-  <section id="fellows" class="py-5">
-    <div class="container animate__animated animate__fadeInUp">
-      <h2>Become an LSF Fellow</h2>
-      <p>Join us to gain experience, contribute to impactful projects, and get global recognition.</p>
-      <a href="#" class="btn btn-outline-dark grow-on-hover">Apply Now</a>
+
+<section class="py-5 strategic-section">
+  <div class="container">
+    <p class="section-label">Key Initiatives</p>
+    <h2 class="section-heading">Our Strategic Focus</h2>
+    <p class="section-description">
+      One of the top priorities of the Lanka Software Foundation (LSF) is to improve public services and
+      governance in Sri Lanka. LSF has committed to delivering the project of Digital Public Infrastructure (DPI)
+      by 2025.
+    </p>
+  </div>
+</section>
+
+
+<section class="auto-scroll-wrapper">
+  <div class="auto-scroll-track">
+    <!-- 4 cards -->
+    <div class="scroll-box">
+      <i class="fas fa-database fa-3x mb-2"></i>
+      <h5>Data Exchange</h5>
+      <p class="description">Secure, consent-driven data integration solutions tailored for governments.</p>
     </div>
-  </section>
-
-  <!-- Get Involved Section -->
-  <section id="get-involved" class="py-5 bg-light">
-    <div class="container animate__animated animate__zoomIn">
-      <h2>Get Involved</h2>
-      <p>Partner with us, volunteer, or join the open-source community to help us build digital public goods.</p>
+    <div class="scroll-box">
+      <i class="fas fa-code-branch fa-3x mb-2"></i>
+      <h5>Open Source Projects</h5>
+      <p class="description">Advanced open source software solutions for government institutions.</p>
     </div>
-  </section>
+    <div class="scroll-box">
+      <i class="fas fa-th-large fa-3x mb-2"></i>
+      <h5>Super App</h5>
+      <p class="description">Integrated microapps enhancing government employee digital experience.</p>
+    </div>
+    <div class="scroll-box">
+      <i class="fas fa-envelope-open-text fa-3x mb-2"></i>
+      <h5>Email Platform</h5>
+      <p class="description">Secure, government-grade open-source email solutions for communication.</p>
+    </div>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-5">
-    <div class="container animate__animated animate__fadeIn">
-      <h2>Contact Us</h2>
-      <p>Email: contact@opensource.lk | Phone: +94-777374957</p>
+    <!-- duplicate for smooth loop -->
+    <div class="scroll-box">
+      <i class="fas fa-database fa-3x mb-2"></i>
+      <h5>Data Exchange</h5>
+      <p class="description">Secure, consent-driven data integration solutions tailored for governments.</p>
+    </div>
+    <div class="scroll-box">
+      <i class="fas fa-code-branch fa-3x mb-2"></i>
+      <h5>Open Source Projects</h5>
+      <p class="description">Advanced open source software solutions for government institutions.</p>
+    </div>
+    <div class="scroll-box">
+      <i class="fas fa-th-large fa-3x mb-2"></i>
+      <h5>Super App</h5>
+      <p class="description">Integrated microapps enhancing government employee digital experience.</p>
+    </div>
+    <div class="scroll-box">
+      <i class="fas fa-envelope-open-text fa-3x mb-2"></i>
+      <h5>Email Platform</h5>
+      <p class="description">Secure, government-grade open-source email solutions for communication.</p>
+    </div>
+  </div>
+</section>
+
+<style>
+  .strategic-section {
+  background-color: #e9f6fc;
+  text-align: left;
+}
+
+.strategic-section .section-label {
+  color: #0aa1dd;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  margin-bottom: 5px;
+}
+
+.strategic-section .section-heading {
+  font-size: 2.25rem;
+  font-weight: 700;
+  margin-bottom: 15px;
+  color: #111;
+}
+
+.strategic-section .section-description {
+  font-size: 1.1rem;
+  color: #333;
+  max-width: 750px;
+}
+
+  .auto-scroll-wrapper {
+    margin-top: -50px;
+    background-color: #e9f6fc;
+    overflow: hidden;
+    position: relative;
+    padding: 20px 0;
+  }
+
+  .auto-scroll-track {
+    display: flex;
+    width: calc(300px * 8); /* 8 boxes */
+    animation: scroll-step 16s steps(8) infinite;
+  }
+
+  .scroll-box {
+    min-width: 300px;
+    max-width: 300px;
+    height: 300px;
+    margin-right: 1rem;
+    background-color: #ffffff;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 15px;
+    box-sizing: border-box;
+    flex-shrink: 0;
+  }
+
+  .scroll-box i {
+    color: #0aa1dd; /* consistent light blue icon */
+  }
+
+  .description {
+    font-size: 0.85rem;
+    margin-top: 10px;
+    color: #444;
+  }
+
+  @keyframes scroll-step {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-1200px); /* 4 cards * 300px */
+    }
+  }
+</style>
+
+
+      </div>
+      </div>
     </div>
   </section>
 
@@ -94,5 +227,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/script.js"></script>
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
 </body>
 </html>
