06/16 start about page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       
       <!-- LSF Logo Left-Aligned -->
       <a class="navbar-brand me-auto" href="#">
-        <img src="img/home/lsf.webp" alt="LSF Logo" height="40">
+        <img src="img/home/headlogo.webp" alt="LSF Logo" height="40">
       </a>
 
       <!-- Toggle for Mobile -->
