--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,101 @@
 
   </head>
   <body>
+    <!--Nav bar-->
+<!-- NAVBAR SECTION -->
+<header class="custom-header">
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container py-2 px-4 d-flex justify-content-between align-items-center"
+      style="width: 100%; max-width: 1140px; margin: 10px auto; border-radius: 50px; background-color: #ffffffd9; border: 1px solid #d0e8ff;">
+
+      <!-- LSF Logo -->
+      <a class="navbar-brand me-auto" href="index.html">
+        <img src="img/home/headlogo.webp" alt="LSF Logo" height="40">
+      </a>
+
+      <!-- Toggle Button -->
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Collapsible Menu -->
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav align-items-center">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="fellows.html">Fellows</a></li>
+          <li class="nav-item"><a class="nav-link" href="involved.html">Get Involved</a></li>
+
+          <!-- Mobile Contact Button -->
+          <li class="nav-item d-lg-none mt-2">
+            <a href="contact.html" class="btn btn-primary btn-sm w-100">Contact Us</a>
+          </li>
+        </ul>
+
+        <!-- Desktop Contact Button -->
+        <a href="contact.html" class="btn btn-primary btn-sm rounded-pill ms-3 d-none d-lg-inline-block">Contact Us</a>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<!-- NAVBAR STYLE -->
+<style>
+  .navbar {
+    padding: 0.3rem 1rem;
+    backdrop-filter: blur(8px);
+  }
+
+  .navbar-collapse {
+    background: transparent !important;
+    box-shadow: none !important;
+    border-radius: 0 !important;
+    padding: 0 !important;
+    margin-top: 0 !important;
+  }
+
+  .navbar-nav {
+    background: transparent !important;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+  .navbar-nav .nav-link {
+    color: #333;
+    font-weight: 500;
+    padding: 0.5rem 1rem;
+    transition: color 0.2s ease;
+  }
+
+  .navbar-nav .nav-link:hover {
+    color: #0d6efd;
+  }
+
+  .navbar-collapse .btn {
+    font-weight: 500;
+    padding: 0.5rem 1rem;
+    color: #ffffff;
+    background-color: #0d6efd !important;
+    border-radius: 6px;
+    margin-top: 0.75rem;
+  }
+
+  .navbar-toggler {
+    border: none !important;
+    background: none !important;
+    box-shadow: none !important;
+  }
+
+  .navbar-toggler-icon {
+    filter: brightness(0.1);
+  }
+</style>
+
+
+
+
     <!--blue banner-->
     <section class="page-hero-image">
     <img src="img/about/abot bg.webp" alt="Empowering Sri Lanka" class="img-fluid banner-img">
@@ -51,5 +146,6 @@
   </section>
   <!---->
 
-  </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
   </html>
