--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
 
     <div class="d-flex justify-content-between align-items-center mt-4 small flex-wrap text-center text-md-start">
       <p class="mb-0">Lanka Software Foundation 2025. All rights reserved.</p>
-      <p class="mb-0 fw-bold">A Recreation by WENUX</p>
+      <p class="mb-0 fw-bold">LSF Team</p>
     </div>
   </div>
 </footer>
