--- a/involved.html
+++ b/involved.html
@@ -120,6 +120,54 @@
         max-width: 100%;
       }
     }
+
+    @media (max-width: 768px) {
+  .timeline-section {
+    padding: 40px 15px;
+  }
+
+  .timeline-item {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .timeline-left {
+    margin: 0 0 10px;
+    transform: none;
+  }
+
+  .timeline-left .number-block img {
+    width: 100px; /* smaller number image */
+  }
+
+  .line {
+    height: 50px; /* reduce line height */
+  }
+
+  .timeline-content {
+    max-width: 100%;
+    width: 100%;
+    padding: 15px;
+  }
+
+  .timeline-content h3 {
+    font-size: 18px;
+  }
+
+  .timeline-content p {
+    font-size: 13px;
+  }
+
+  .btn-group {
+    justify-content: center;
+  }
+
+  .custom-btn {
+    padding: 6px 12px;
+    font-size: 14px;
+  }
+}
+
   </style>
 </head>
 
