--- a/involved.html
+++ b/involved.html
@@ -4,30 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Get Involved - LSF</title>
-  <style>
+ <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: #e9f6fc;
     }
 
-    /* === HERO BANNER === */
     .page-hero-image {
       position: relative;
       width: 100%;
       height: 320px;
       overflow: hidden;
-      margin-bottom: -20px; /* 🟡 Reduce bottom space */
+      margin-bottom: -20px;
     }
-
     .banner-img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       display: block;
-      margin: 0;
     }
-
     .hero-text {
       position: absolute;
       top: 50%;
@@ -36,7 +32,6 @@
       text-align: center;
       color: #fff;
     }
-
     .hero-text h1 {
       font-size: 2rem;
       font-weight: 700;
@@ -45,70 +40,60 @@
       text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
     }
 
-    /* === TESTIMONIAL SECTION === */
     .testimonial-section {
-      padding: 30px 20px 60px; /* 🟡 Top reduced */
+      padding: 30px 20px 60px;
       text-align: center;
       max-width: 1200px;
       margin: auto;
     }
-
     .testimonial-section .subtitle {
       color: #0d6efd;
       text-transform: uppercase;
       font-weight: bold;
       letter-spacing: 1px;
     }
-
     .testimonial-section h2 {
       margin-top: 5px;
       font-size: 28px;
     }
-
     .testimonial-slider-wrapper {
       overflow: hidden;
       margin-top: 40px;
       position: relative;
     }
-
     .testimonial-track {
       display: flex;
       gap: 2rem;
       transition: transform 0.6s ease-in-out;
     }
-
     .testimonial-card {
       flex: 0 0 48%;
       max-width: 48%;
       background-color: #fff;
-      padding: 1.5rem 1.5rem 1rem; /* 🟡 Less padding */
+      padding: 1.5rem 1.5rem 1rem;
       border-radius: 10px;
       text-align: left;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
       position: relative;
     }
-
     .testimonial-card::before {
-      content: "❝";
+      content: "\201C";
       font-size: 50px;
       color: #ccc;
       position: absolute;
       top: 5px;
       left: 15px;
     }
-
     .testimonial-text {
       font-size: 15px;
       color: #444;
       line-height: 1.6;
       padding-top: 30px;
     }
-
     .testimonial-author {
       margin-top: 20px;
       font-weight: bold;
     }
-
     .testimonial-role {
       color: #0d6efd;
       font-weight: 500;
@@ -121,53 +106,177 @@
       }
     }
 
-    @media (max-width: 768px) {
-  .timeline-section {
-    padding: 40px 15px;
-  }
-
-  .timeline-item {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .timeline-left {
-    margin: 0 0 10px;
-    transform: none;
-  }
-
-  .timeline-left .number-block img {
-    width: 100px; /* smaller number image */
-  }
-
-  .line {
-    height: 50px; /* reduce line height */
-  }
-
-  .timeline-content {
-    max-width: 100%;
-    width: 100%;
-    padding: 15px;
-  }
-
-  .timeline-content h3 {
-    font-size: 18px;
-  }
-
-  .timeline-content p {
-    font-size: 13px;
-  }
-
-  .btn-group {
-    justify-content: center;
-  }
-
-  .custom-btn {
-    padding: 6px 12px;
-    font-size: 14px;
-  }
+    .hero-quote-banner {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(to right, #0070c0, #004a99);
+      height: 340px;
+      padding: 0 40px;
+      box-sizing: border-box;
+      position: relative;
+      overflow: hidden;
+    }
+ .lion-wrapper {
+  flex: 0 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10px;
+  width: 15vw; /* 🔵 responsive width */
+  max-width: 180px;
+  min-width: 80px;
 }
 
+
+.lion-wrapper img {
+  width: 100%;
+  height: auto;
+  max-height: 85%;
+  object-fit: contain;
+}
+
+    .banner-text-wrapper {
+      flex: 1;
+      text-align: center;
+      padding: 0 20px;
+    }
+    .banner-text {
+      color: white;
+      font-size: 36px;
+      font-weight: 700;
+      line-height: 1.4;
+      margin: 0;
+    }
+
+    @media (max-width: 992px) {
+      .hero-quote-banner {
+        height: 280px;
+        padding: 0 30px;
+      }
+      .banner-text {
+        font-size: 30px;
+      }
+      .lion-wrapper img {
+        height: 70%;
+      }
+    }
+    @media (max-width: 600px) {
+      .hero-quote-banner {
+        height: 220px;
+        padding: 0 20px;
+      }
+      .banner-text {
+        font-size: 20px;
+      }
+      .lion-wrapper img {
+        height: 60%;
+      }
+    }
+
+    .participation-section {
+      background-color: #e6f6fb;
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .participation-section h2 {
+      font-size: 24px;
+      font-weight: 700;
+      color: #001b44;
+      margin: 0;
+    }
+
+    .timeline-section {
+      background: #fdffffc2;
+      padding: 80px 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .timeline-item {
+      display: flex;
+      align-items: flex-start;
+      margin-bottom: 10px;
+      max-width: 900px;
+      width: 90%;
+      flex-wrap: wrap;
+    }
+    .timeline-left {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-right: 30px;
+      transform: translateY(50px);
+    }
+    .number-block img {
+      width: 100px;
+      max-width: 100%;
+    }
+    .line {
+      width: 4px;
+      height: 200px;
+      background: #0070c0;
+      margin-top: 1px;
+    }
+    .timeline-content {
+      background: rgba(247, 245, 245, 0.801);
+      border-radius: 5px;
+      padding: 20px 25px;
+      box-shadow: 0 5px 15px rgba(59, 114, 233, 0.1);
+      flex: 1;
+      min-width: 250px;
+    }
+    .timeline-content h3 {
+      font-size: 20px;
+      font-weight: 700;
+      color: #001b44;
+      margin-bottom: 10px;
+    }
+    .timeline-content p {
+      font-size: 14px;
+      margin-bottom: 10px;
+      color: #333;
+    }
+    .btn-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .custom-btn {
+      background-color: #0077cc;
+      color: white;
+      text-decoration: none;
+      padding: 3px 7px;
+      border-radius: 5px;
+      font-weight: 400;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+    .custom-btn:hover {
+      background-color: #005fa3;
+      transform: scale(1.05);
+    }
+    .social-icons {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .social-icons a {
+      width: 30px;
+      height: 30px;
+      padding: 2px;
+      background-color: #fcfafa;
+      border-radius: 5px;
+      transition: transform 0.2s ease;
+    }
+    .social-icons a:hover {
+      transform: scale(1.1);
+    }
+    .social-icons img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
   </style>
 </head>
 
@@ -261,98 +370,7 @@
   <h2>Here’s how you can participate in the community</h2>
 </section>
 
-<style>
-.hero-quote-banner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(to right, #0070c0, #004a99);
-  height: 340px; /* taller blue bar */
-  padding: 0 40px;
-  box-sizing: border-box;
-  position: relative;
-  overflow: hidden;
-}
 
-.lion-wrapper {
-  flex-shrink: 0;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  padding: 0 10px;
-}
-
-.lion-wrapper img {
-  height: 85%; /* not full height to leave padding */
-  object-fit: contain;
-}
-
-.lion-wrapper.left {
-  justify-content: flex-start;
-}
-
-.lion-wrapper.right {
-  justify-content: flex-end;
-}
-
-.banner-text-wrapper {
-  flex: 1;
-  text-align: center;
-  padding: 0 20px;
-}
-
-.banner-text {
-  color: white;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.4;
-  margin: 0;
-}
-
-/* Responsive */
-@media (max-width: 992px) {
-  .hero-quote-banner {
-    height: 280px;
-    padding: 0 30px;
-  }
-
-  .banner-text {
-    font-size: 30px;
-  }
-
-  .lion-wrapper img {
-    height: 70%;
-  }
-}
-
-@media (max-width: 600px) {
-  .hero-quote-banner {
-    height: 220px;
-    padding: 0 20px;
-  }
-
-  .banner-text {
-    font-size: 20px;
-  }
-
-  .lion-wrapper img {
-    height: 60%;
-  }
-}
-.participation-section {
-  background-color: #e6f6fb; /* matches your site's light blue */
-  padding: 60px 20px;
-  text-align: center;
-}
-
-.participation-section h2 {
-  font-size: 24px;
-  font-weight: 700;
-  color: #001b44; /* dark navy text */
-  margin: 0;
-}
-
-</style>
 <!--invloved steps-->
 <!-- Timeline Section with Number on the Line -->
 <section class="timeline-section">
@@ -482,120 +500,7 @@
   </div>
 </section>
 
-<style>
-  .timeline-left.first {
-  margin-top: 10px;
-}
 
-.timeline-section {
-  background: #fdffffc2;
-  padding: 80px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.timeline-item {
-  display: flex;
-  align-items: flex-start;
-  margin-bottom: 10px;
-  max-width: 900px;
-  width: 90%;
-}
-
-.timeline-left {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-right: 30px;
-  transform: translateY(50px);
-}
-
-.number-block img {
-  width: 200px;
-}
-
-.line {
-  width: 4px;
-  height: 450px;
-  background: #0070c0;
-  margin-top: 1px;
-}
-
-.timeline-content {
-  background: rgba(247, 245, 245, 0.801);
-  border-radius: 5px;
-  padding: 20px 25px;
-  box-shadow: 0 5px 15px rgba(59, 114, 233, 0.1);
-  flex: 1;
-  max-width: 400px;
-}
-
-.timeline-content h3 {
-  font-size: 20px;
-  font-weight: 700;
-  color: #001b44;
-  margin-bottom: 10px;
-}
-
-.timeline-content p {
-  font-size: 14px;
-  margin-bottom: 10px;
-  color: #333;
-}
-/*buttons*/
-.btn-group {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  margin-top: 10px;
-}
-
-.custom-btn {
-  background-color: #0077cc;
-  color: white;
-  text-decoration: none;
-  padding: 3px 7px;
-  border-radius: 5px;
-  font-weight: 400;
-  display: inline-block;
-  transition: background-color 0.3s ease, transform 0.2s ease;
-}
-
-.custom-btn:hover {
-  background-color: #005fa3;
-  transform: scale(1.05);
-}
-
-/*social icons*/
-.social-icons {
-  display: flex;
-  gap: 10px;
-  margin-top: 10px;
-}
-
-.social-icons a {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  padding: 2px;
-  background-color: #fcfafa;
-  border: 1px solid #ffffff00;
-  border-radius: px;
-  transition: background-color 0.3s ease, transform 0.2s ease;
-}
-
-.social-icons a:hover {
-  transform: scale(1.1);
-}
-
-.social-icons img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-</style>
 
 </body>
 </html>
