--- a/involved.html
+++ b/involved.html
@@ -5,129 +5,138 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Get Involved - LSF</title>
  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #e9f6fc;
-    }
+   body {
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #e9f6fc;
+}
 
-    .page-hero-image {
-      position: relative;
-      width: 100%;
-      height: 320px;
-      overflow: hidden;
-      margin-bottom: -20px;
-    }
-    .banner-img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-    .hero-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      color: #fff;
-    }
-    .hero-text h1 {
-      font-size: 2rem;
-      font-weight: 700;
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
-    }
+/* === HERO BANNER === */
+.page-hero-image {
+  position: relative;
+  width: 100%;
+  height: 320px;
+  overflow: hidden;
+  margin-bottom: -20px;
+}
 
-    .testimonial-section {
-      padding: 30px 20px 60px;
-      text-align: center;
-      max-width: 1200px;
-      margin: auto;
-    }
-    .testimonial-section .subtitle {
-      color: #0d6efd;
-      text-transform: uppercase;
-      font-weight: bold;
-      letter-spacing: 1px;
-    }
-    .testimonial-section h2 {
-      margin-top: 5px;
-      font-size: 28px;
-    }
-    .testimonial-slider-wrapper {
-      overflow: hidden;
-      margin-top: 40px;
-      position: relative;
-    }
-    .testimonial-track {
-      display: flex;
-      gap: 2rem;
-      transition: transform 0.6s ease-in-out;
-    }
-    .testimonial-card {
-      flex: 0 0 48%;
-      max-width: 48%;
-      background-color: #fff;
-      padding: 1.5rem 1.5rem 1rem;
-      border-radius: 10px;
-      text-align: left;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-      position: relative;
-    }
-    .testimonial-card::before {
-      content: "\201C";
-      font-size: 50px;
-      color: #ccc;
-      position: absolute;
-      top: 5px;
-      left: 15px;
-    }
-    .testimonial-text {
-      font-size: 15px;
-      color: #444;
-      line-height: 1.6;
-      padding-top: 30px;
-    }
-    .testimonial-author {
-      margin-top: 20px;
-      font-weight: bold;
-    }
-    .testimonial-role {
-      color: #0d6efd;
-      font-weight: 500;
-    }
+.banner-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
 
-    @media (max-width: 768px) {
-      .testimonial-card {
-        flex: 0 0 100%;
-        max-width: 100%;
-      }
-    }
+.hero-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+}
 
-    .hero-quote-banner {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(to right, #0070c0, #004a99);
-      height: 340px;
-      padding: 0 40px;
-      box-sizing: border-box;
-      position: relative;
-      overflow: hidden;
-    }
- .lion-wrapper {
+.hero-text h1 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
+}
+
+/* === TESTIMONIAL === */
+.testimonial-section {
+  padding: 30px 20px 60px;
+  text-align: center;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.testimonial-section .subtitle {
+  color: #0d6efd;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.testimonial-section h2 {
+  margin-top: 5px;
+  font-size: 28px;
+}
+
+.testimonial-slider-wrapper {
+  overflow: hidden;
+  margin-top: 40px;
+  position: relative;
+}
+
+.testimonial-track {
+  display: flex;
+  gap: 2rem;
+  transition: transform 0.6s ease-in-out;
+}
+
+.testimonial-card {
+  flex: 0 0 48%;
+  max-width: 48%;
+  background-color: #fff;
+  padding: 1.5rem 1.5rem 1rem;
+  border-radius: 10px;
+  text-align: left;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  position: relative;
+}
+
+.testimonial-card::before {
+  content: "\201C";
+  font-size: 50px;
+  color: #ccc;
+  position: absolute;
+  top: 5px;
+  left: 15px;
+}
+
+.testimonial-text {
+  font-size: 15px;
+  color: #444;
+  line-height: 1.6;
+  padding-top: 30px;
+}
+
+.testimonial-author {
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+.testimonial-role {
+  color: #0d6efd;
+  font-weight: 500;
+}
+
+/* === QUOTE SECTION with LIONS === */
+.hero-quote-banner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(to right, #0070c0, #004a99);
+  height: 340px;
+  padding: 0 40px;
+  box-sizing: border-box;
+  position: relative;
+  overflow: hidden;
+  flex-direction: row; /* desktop layout */
+}
+
+.lion-wrapper {
   flex: 0 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 10px;
-  width: 15vw; /* 🔵 responsive width */
+  width: 15vw;
   max-width: 180px;
   min-width: 80px;
 }
-
 
 .lion-wrapper img {
   width: 100%;
@@ -136,148 +145,189 @@
   object-fit: contain;
 }
 
-    .banner-text-wrapper {
-      flex: 1;
-      text-align: center;
-      padding: 0 20px;
-    }
-    .banner-text {
-      color: white;
-      font-size: 36px;
-      font-weight: 700;
-      line-height: 1.4;
-      margin: 0;
-    }
+.banner-text-wrapper {
+  flex: 1;
+  text-align: center;
+  padding: 0 20px;
+}
 
-    @media (max-width: 992px) {
-      .hero-quote-banner {
-        height: 280px;
-        padding: 0 30px;
-      }
-      .banner-text {
-        font-size: 30px;
-      }
-      .lion-wrapper img {
-        height: 70%;
-      }
-    }
-    @media (max-width: 600px) {
-      .hero-quote-banner {
-        height: 220px;
-        padding: 0 20px;
-      }
-      .banner-text {
-        font-size: 20px;
-      }
-      .lion-wrapper img {
-        height: 60%;
-      }
-    }
+.banner-text {
+  color: white;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.4;
+  margin: 0;
+}
 
-    .participation-section {
-      background-color: #e6f6fb;
-      padding: 60px 20px;
-      text-align: center;
-    }
-    .participation-section h2 {
-      font-size: 24px;
-      font-weight: 700;
-      color: #001b44;
-      margin: 0;
-    }
+/* === PARTICIPATION + TIMELINE === */
+.participation-section {
+  background-color: #e6f6fb;
+  padding: 60px 20px;
+  text-align: center;
+}
 
-    .timeline-section {
-      background: #fdffffc2;
-      padding: 80px 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .timeline-item {
-      display: flex;
-      align-items: flex-start;
-      margin-bottom: 10px;
-      max-width: 900px;
-      width: 90%;
-      flex-wrap: wrap;
-    }
-    .timeline-left {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-right: 30px;
-      transform: translateY(50px);
-    }
-    .number-block img {
-      width: 100px;
-      max-width: 100%;
-    }
-    .line {
-      width: 4px;
-      height: 200px;
-      background: #0070c0;
-      margin-top: 1px;
-    }
-    .timeline-content {
-      background: rgba(247, 245, 245, 0.801);
-      border-radius: 5px;
-      padding: 20px 25px;
-      box-shadow: 0 5px 15px rgba(59, 114, 233, 0.1);
-      flex: 1;
-      min-width: 250px;
-    }
-    .timeline-content h3 {
-      font-size: 20px;
-      font-weight: 700;
-      color: #001b44;
-      margin-bottom: 10px;
-    }
-    .timeline-content p {
-      font-size: 14px;
-      margin-bottom: 10px;
-      color: #333;
-    }
-    .btn-group {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 10px;
-    }
-    .custom-btn {
-      background-color: #0077cc;
-      color: white;
-      text-decoration: none;
-      padding: 3px 7px;
-      border-radius: 5px;
-      font-weight: 400;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-    }
-    .custom-btn:hover {
-      background-color: #005fa3;
-      transform: scale(1.05);
-    }
-    .social-icons {
-      display: flex;
-      gap: 10px;
-      margin-top: 10px;
-    }
-    .social-icons a {
-      width: 30px;
-      height: 30px;
-      padding: 2px;
-      background-color: #fcfafa;
-      border-radius: 5px;
-      transition: transform 0.2s ease;
-    }
-    .social-icons a:hover {
-      transform: scale(1.1);
-    }
-    .social-icons img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-    }
-  </style>
+.participation-section h2 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #001b44;
+  margin: 0;
+}
+
+.timeline-section {
+  background: #fdffffc2;
+  padding: 80px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.timeline-item {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 10px;
+  max-width: 900px;
+  width: 90%;
+  flex-wrap: wrap;
+}
+
+.timeline-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 30px;
+  transform: translateY(50px);
+}
+
+.number-block img {
+  width: 100px;
+  max-width: 100%;
+}
+
+.line {
+  width: 4px;
+  height: 200px;
+  background: #0070c0;
+  margin-top: 1px;
+}
+
+.timeline-content {
+  background: rgba(247, 245, 245, 0.801);
+  border-radius: 5px;
+  padding: 20px 25px;
+  box-shadow: 0 5px 15px rgba(59, 114, 233, 0.1);
+  flex: 1;
+  min-width: 250px;
+}
+
+.timeline-content h3 {
+  font-size: 20px;
+  font-weight: 700;
+  color: #001b44;
+  margin-bottom: 10px;
+}
+
+.timeline-content p {
+  font-size: 14px;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.btn-group {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.custom-btn {
+  background-color: #0077cc;
+  color: white;
+  text-decoration: none;
+  padding: 3px 7px;
+  border-radius: 5px;
+  font-weight: 400;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.custom-btn:hover {
+  background-color: #005fa3;
+  transform: scale(1.05);
+}
+
+.social-icons {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.social-icons a {
+  width: 30px;
+  height: 30px;
+  padding: 2px;
+  background-color: #fcfafa;
+  border-radius: 5px;
+  transition: transform 0.2s ease;
+}
+
+.social-icons a:hover {
+  transform: scale(1.1);
+}
+
+.social-icons img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+/* === MEDIA QUERIES === */
+@media (max-width: 992px) {
+  .hero-quote-banner {
+    height: 280px;
+    padding: 0 30px;
+  }
+
+  .banner-text {
+    font-size: 30px;
+  }
+
+  .lion-wrapper img {
+    height: 70%;
+  }
+}
+
+@media (max-width: 768px) {
+  .testimonial-card {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  .hero-quote-banner {
+    flex-direction: column; /* 🟢 Stack lions on mobile */
+    height: auto;
+    padding: 20px;
+    gap: 10px;
+  }
+
+  .banner-text {
+    font-size: 20px;
+  }
+
+  .lion-wrapper img {
+    height: 60%;
+  }
+
+  .line {
+    display: none; /* 🔵 Hide vertical line */
+  }
+
+  .timeline-left {
+    margin: 0 auto 10px;
+  }
+}
+
+</style>
 </head>
 
 <body>
