contatct us pge

--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,218 @@
     </div>
   </section>
   <!---->
+<section class="contact-section">
+  <div class="container">
+    <div class="contact-grid">
+      <!-- Left Column -->
+      <div class="contact-text">
+        <h5>Contact Us</h5>
+        <div class="contact-title">Connect With Us</div>
+        <p class="contact-p">
+          Join the conversation, contribute your insights,<br>
+          and help shape the future of inclusive and transformative digital governance worldwide.
+        </p>
 
+        <!-- Let’s Talk Button ONLY -->
+        <a href="https://forms.gle/your-google-form-link" target="_blank" class="btn btn-talk">Let’s Talk</a>
+      </div>
+
+      <!-- Right Column -->
+      <div class="contact-card">
+        <h3>Reach Out</h3>
+        <p class="small-heading">GENERAL/PARTNERSHIP ENQUIRIES</p>
+        <p class="email">contact@opensource.lk</p>
+        <p class="phone">0777347957</p>
+        <div class="social-icons">
+          <img src="img/fb.png" alt="FB Icon">
+          <img src="img/x.png" alt="X Icon">
+          <img src="img/yt.png" alt="YT Icon">
+        </div>
+        <img src="img/lion.png" alt="LSF Lion" class="lion-logo">
+      </div>
+    </div>
+
+    <!-- Two Buttons Under Blue Card -->
+    <div class="contact-buttons bottom-buttons">
+      <a href="https://forms.gle/your-google-form-link" target="_blank" class="btn btn-primary">Join LSF Fellows</a>
+      <a href="https://forms.gle/your-google-form-link" target="_blank" class="btn btn-outline">Become a Volunteer</a>
+    </div>
+  </div>
+</section>
+<style>
+  .contact-section {
+  background-color: #e6f6fb;
+  padding: 60px 20px;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+.contact-section .container {
+  max-width: 1140px;
+  margin: auto;
+}
+
+.contact-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.contact-text {
+  flex: 1 1 350px;
+}
+
+.contact-text h5 {
+  text-transform: uppercase;
+  color: #004a99;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.contact-title {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.contact-p {
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.contact-card {
+  background: linear-gradient(to right, #0070c0, #004a99);
+  color: white;
+  padding: 30px;
+  flex: 1 1 350px;
+  border-radius: 0;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+}
+
+.contact-card h3 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.contact-card .small-heading {
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  color: #e6e6e6;
+  margin-bottom: 8px;
+}
+
+.contact-card .email,
+.contact-card .phone {
+  font-size: 14px;
+  margin-bottom: 6px;
+  font-weight: 500;
+}
+
+.social-icons {
+  margin-top: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.social-icons img {
+  width: 24px;
+  height: 24px;
+}
+
+.lion-logo {
+  margin-top: 30px;
+  width: 90px;
+}
+
+/* === Buttons === */
+.contact-buttons {
+  margin-top: 20px;
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
+.btn {
+  text-decoration: none;
+  font-weight: 600;
+  padding: 10px 25px;
+  border-radius: 4px;
+  text-align: center;
+  transition: all 0.3s ease;
+  font-size: 14px;
+}
+
+.btn-primary {
+  background-color: #0070c0;
+  color: white;
+}
+
+.btn-primary:hover {
+  background-color: #005fa3;
+}
+
+.btn-outline {
+  border: 2px solid #0070c0;
+  color: #0070c0;
+  background-color: transparent;
+}
+
+.btn-outline:hover {
+  background-color: #f1f1ff;
+  color: #004a99;
+}
+
+.btn-talk {
+  background-color: #004a99;
+  color: white;
+}
+
+.btn-talk:hover {
+  background-color: #002f66;
+}
+
+/* === Responsive Fixes === */
+@media (max-width: 768px) {
+  .contact-grid {
+    flex-direction: column;
+  }
+
+  .contact-buttons {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .btn {
+    width: 100%;
+  }
+}
+.contact-buttons.bottom-buttons {
+  margin-top: 25px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
+/* Mobile responsiveness */
+@media (max-width: 768px) {
+  .contact-buttons.bottom-buttons {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .btn {
+    width: 100%;
+  }
+}
+
+</style>
+  
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
   </html>
