--- a/contact.html
+++ b/contact.html
@@ -168,11 +168,11 @@
         <p class="email">contact@opensource.lk</p>
         <p class="phone">0777347957</p>
         <div class="social-icons">
-          <img src="img/fb.png" alt="FB Icon">
-          <img src="img/x.png" alt="X Icon">
-          <img src="img/yt.png" alt="YT Icon">
+          <img src="img/contact/facebook.png" alt="FB Icon">
+          <img src="img/contact/x.png" alt="X Icon">
+          <img src="img/contact/youtube.png" alt="YT Icon">
         </div>
-        <img src="img/lion.png" alt="LSF Lion" class="lion-logo">
+        <img src="img/home/lsf.webp" alt="LSF Lion" class="lion-logo">
       </div>
     </div>
 
